@@ -221,7 +221,7 @@ extern Process * list_of_processes;
 extern Event * next_event(void);
 extern Process * pid2proc(pid_t pid);
 extern void handle_event(Event * event);
-extern void execute_program(Process *, char **);
+extern pid_t execute_program(const char * command, char ** argv);
 extern int display_arg(enum tof type, Process * proc, int arg_num, arg_type_info * info);
 extern Breakpoint * address2bpstruct(Process * proc, void * addr);
 extern void breakpoints_init(Process * proc);
